@startuml Diagrama_Clases_Completo_Simple
!theme plain
skinparam classAttributeIconSize 0
hide empty members
skinparam class {
    BackgroundColor<<MVP>> LightGreen
    BackgroundColor<<Extra>> LightBlue
}

title Diagrama de Clases - MeerKatters (Completo - Solo Objetos)

' ============ ENUMS ============
enum TipoPlan <<MVP>>
enum TipoGrupo <<MVP>>
enum TipoPlanComunidad <<MVP>>
enum EstadoComunidad <<MVP>>
enum RolComunidad <<MVP>>
enum EstadoSolicitud <<MVP>>
enum EstadoAsistencia <<MVP>>
enum TipoTransaccion <<MVP>>
enum EstadoTransaccion <<MVP>>
enum EstadoInvitacion <<MVP>>
enum TipoNotificacion <<Extra>>

' ============ CLASES MVP ============
class Usuario <<MVP>>
class Profesor <<MVP>>
class Comunidad <<MVP>>
class ClassroomAssociation <<MVP>>
class MiembroComunidad <<MVP>>
class SolicitudComunidad <<MVP>>
class Evento <<MVP>>
class AsistenciaEvento <<MVP>>
class InvitacionEvento <<MVP>>
class ArchivoAdjunto <<MVP>>
class TransaccionPago <<MVP>>
class Categoria <<MVP>>
class Suscripcion <<MVP>>
class Institucion <<MVP>>

' ============ CLASES EXTRA ============
class Mensaje <<Extra>>
class InvitacionCorporativa <<Extra>>
class Notificacion <<Extra>>
class PreferenciasNotificacion <<Extra>>
class GrabacionReunion <<Extra>>

' ============ RELACIONES ============

' Usuario relaciones
Usuario "1" -- "0..1" Profesor : tiene perfil >
Usuario "1" -- "0..*" MiembroComunidad : pertenece a >
Usuario "1" -- "0..1" Suscripcion : tiene >
Usuario "1" -- "0..*" Evento : crea >
Usuario "1" -- "0..*" AsistenciaEvento : asiste a >
Usuario "1" -- "0..*" ArchivoAdjunto : adjunta >
Usuario "1" -- "0..*" TransaccionPago : realiza >
Usuario "1" -- "0..*" Mensaje : envía >
Usuario "1" -- "0..*" SolicitudComunidad : solicita >
Usuario "1" -- "0..*" Notificacion : recibe >
Usuario "1" -- "0..1" PreferenciasNotificacion : configura >

' Profesor relaciones
Profesor "0..*" -- "0..*" Comunidad : contratado por >
Profesor "1" -- "0..*" TransaccionPago : recibe pagos >
Profesor "1" -- "0..1" ClassroomAssociation : propietario >

' Comunidad relaciones
Comunidad "1" -- "0..*" MiembroComunidad : tiene >
Comunidad "1" -- "1" Usuario : creada por >
Comunidad "1" -- "0..*" Evento : contiene >
Comunidad "1" -- "0..*" ArchivoAdjunto : almacena >
Comunidad "1" -- "0..*" Categoria : organiza >
Comunidad "1" -- "0..*" Mensaje : contiene >
Comunidad "1" -- "0..*" SolicitudComunidad : recibe >
Comunidad "0..1" -- "0..1" ClassroomAssociation : tiene >
Comunidad "0..*" -- "0..1" Institucion : pertenece a >

' Evento relaciones
Evento "1" -- "0..*" AsistenciaEvento : tiene >
Evento "1" -- "0..*" InvitacionEvento : invita a >
Evento "0..1" -- "0..*" ArchivoAdjunto : asocia >
Evento "1" -- "0..1" GrabacionReunion : tiene >
InvitacionEvento "0..*" -- "1" Usuario : invita a >

' Otras relaciones
ArchivoAdjunto "0..*" -- "0..1" Categoria : pertenece a >
Institucion "1" -- "0..*" InvitacionCorporativa : genera >
SolicitudComunidad "0..1" -- "1" Usuario : respondida por >

' ============ LEYENDA ============
legend right
  |= Color |= Tipo |
  | <#LightGreen> | MVP |
  | <#LightBlue> | Extra |
endlegend

@enduml
